--- a/styles.css
+++ b/styles.css
@@ -81,8 +81,8 @@
 
 /* Style pour le PDF (iframe) */
 iframe {
-    width: 100%;
-    height: 500px;
+    width: 620px;
+    height: 877px;
     border: none;
 }
 
